@@ -21,12 +21,6 @@ use ok 'MooseX::Types::Set::Object';
         is  => "rw",
     );
 
-    has misc => (
-        isa => "Set::Object[Foo]",
-        is  => "rw",
-        coerce => 1,
-    );
-
     has moo => (
         isa    => 'ArrayRef',
         is     => 'rw',
@@ -63,25 +57,5 @@ foreach my $item ( @objs ) {
 like( exception { Blah->new( junk => [ ] ) }, qr/type.*Set::Object/i, "fails without coercion");
 
 like( exception { Blah->new( junk => \@objs ) }, qr/type.*Set::Object/i, "fails without coercion");
-
-
-{
-    local $TODO = "coercion for parameterized types seems borked";
-    is( exception { Blah->new( misc => [ ] ) }, undef, "doesn't fail with empty array for parameterized set type");
-}
-
-is( exception { Blah->new( misc => Set::Object->new ) }, undef, "doesn't fail with empty set for parameterized set type");
-
-like( exception { Blah->new( misc => \@objs ) }, qr/Foo/, "fails on parameterized set type");
-
-like( exception { Blah->new( misc => Set::Object->new(@objs) ) }, qr/Foo/, "fails on parameterized set type");
-
-{
-    local $TODO = "coercion for parameterized types seems borked";
-    is( exception { Blah->new( misc => [ Foo->new, Bar->new ] ) }, undef, "no error on coercion from array filled with the right type");
-}
-
-is( exception { Blah->new( misc => Set::Object->new(Foo->new, Bar->new) ) }, undef, "no error with set filled with the right type");
-like( exception { Blah->new( misc => Set::Object->new(Foo->new, Gorch->new, Bar->new) ) }, qr/Foo/, "error with set that has a naughty object");
 
 done_testing;
